[package]
name = "tttr-toolbox-proc-macros"
version = "0.1.0"
authors = ["Guillem Ballesteros <dev+crate@maxwellrules.com>"]
edition = "2018"
description = "Proc macros for ttt-toolbox"
repository = "https://github.com/GCBallesteros/tttr-toolbox"
homepage = "https://github.com/GCBallesteros/tttr-toolbox"
license = "MIT"
keywords = ["scientific-computing", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
