[package]
name = "tttr-toolbox"
version = "0.1.0"
authors = ["Guillem Ballesteros <guillem.ballesteros.garcia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
thiserror = "1.0"
byteorder = "1"
icecream = "0.1.0"
tttr-toolbox-proc-macros = { path = "../tttr-toolbox-proc-macros" }
dict_derive = "0.3.1"

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]




