[package]
name = "tttr-toolbox"
version = "0.3.0"
authors = ["Guillem Ballesteros <dev+crates@maxwellrules.com>"]
edition = "2018"
description = "Fast streaming algorithms for your TTTR data."
repository = "https://github.com/GCBallesteros/tttr-toolbox"
homepage = "https://github.com/GCBallesteros/tttr-toolbox"
keywords = ["scientific-computing", "science"]
license = "MIT"
readme = "README.md"

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
thiserror = "1.0"
byteorder = "1"
tttr-toolbox-proc-macros = { path = "../tttr-toolbox-proc-macros", version="0.1.0" }

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]




