[package]
name = "tttr-toolbox"
version = "0.4.1"
authors = ["Guillem Ballesteros <dev+crates@maxwellrules.com>"]
edition = "2018"
description = "Fast streaming algorithms for your TTTR data."
repository = "https://github.com/GCBallesteros/tttr-toolbox"
homepage = "https://github.com/GCBallesteros/tttr-toolbox"
keywords = ["scientific-computing", "science"]
license = "MIT"
readme = "README.md"

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
thiserror = "1.0"
byteorder = "1"
tttr-toolbox-proc-macros = { path = "../tttr-toolbox-proc-macros", version="0.1.0" }
clap = "2.33.3"
ndarray = "0.15.2"
ndarray-npy = {version = "0.8.0", features = ["npz"]}
anyhow = "1.0.40"

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[lib]
name = "tttr_toolbox"
path = "src/lib.rs"

[[bin]]
name = "tttr"
path = "src/main.rs"

